test(ControllerScannerTest): Pathvariable에 대한 resolver를 add 할때, immutable list에 대한 add 실패로 ArrayList로 변경하였습니다.